Etapa 2/y.output
Terminals unused in grammar

    KW_THEN
    TOKEN_ERROR


State 48 conflicts: 1 shift/reduce
State 53 conflicts: 1 shift/reduce
State 87 conflicts: 1 shift/reduce
State 105 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declarations

    2 declarations: declaration declarations
    3             | %empty

    4 declaration: type TK_IDENTIFIER '=' literal ';'
    5            | type TK_IDENTIFIER '(' parameters ')' block
    6            | type TK_IDENTIFIER '[' LIT_INT ']' vectorInicialization ';'

    7 type: KW_INT
    8     | KW_REAL
    9     | KW_CHAR
   10     | KW_BOOL

   11 vectorInicialization: %empty
   12                     | literal vectorInicialization

   13 literal: LIT_INT
   14        | LIT_REAL
   15        | LIT_CHAR

   16 block: '{' commandList '}'

   17 parameters: %empty
   18           | parameter parametersTail

   19 parametersTail: %empty
   20               | ',' parameter parametersTail

   21 parameter: type TK_IDENTIFIER

   22 command: KW_IF '(' expression ')' command KW_ELSE command
   23        | KW_IF '(' expression ')' command
   24        | KW_IF '(' expression ')' KW_LOOP command
   25        | KW_RETURN expression ';'
   26        | KW_OUTPUT outputParameters ';'
   27        | block
   28        | ';'
   29        | TK_IDENTIFIER '[' expression ']' '=' expression ';'
   30        | TK_IDENTIFIER '=' expression ';'

   31 outputParameters: expression outputParametersTail
   32                 | LIT_STRING outputParametersTail

   33 outputParametersTail: %empty
   34                     | ',' outputParameters outputParametersTail

   35 commandList: %empty
   36            | command commandList

   37 functionCall: TK_IDENTIFIER '(' expressionList ')'

   38 expressionList: %empty
   39               | expression expressionListTail

   40 expressionListTail: %empty
   41                   | ',' expression expressionListTail

   42 expression: expression '+' expression
   43           | expression '-' expression
   44           | expression '/' expression
   45           | expression '*' expression
   46           | expression '>' expression
   47           | expression '<' expression
   48           | expression '&' expression
   49           | expression '|' expression
   50           | expression '~' expression
   51           | expression OPERATOR_DIF expression
   52           | expression OPERATOR_EQ expression
   53           | expression OPERATOR_GE expression
   54           | expression OPERATOR_LE expression
   55           | '(' expression ')'
   56           | functionCall
   57           | KW_INPUT '(' type ')'
   58           | literal
   59           | TK_IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 48
    '(' (40) 5 22 23 24 37 55 57
    ')' (41) 5 22 23 24 37 55 57
    '*' (42) 45
    '+' (43) 42
    ',' (44) 20 34 41
    '-' (45) 43
    '/' (47) 44
    ';' (59) 4 6 25 26 28 29 30
    '<' (60) 47
    '=' (61) 4 29 30
    '>' (62) 46
    '[' (91) 6 29
    ']' (93) 6 29
    '{' (123) 16
    '|' (124) 49
    '}' (125) 16
    '~' (126) 50
    error (256)
    KW_INT (258) 7
    KW_REAL (259) 8
    KW_CHAR (260) 9
    KW_BOOL (261) 10
    KW_IF (262) 22 23 24
    KW_THEN (263)
    KW_ELSE (264) 22
    KW_LOOP (265) 24
    KW_INPUT (266) 57
    KW_OUTPUT (267) 26
    KW_RETURN (268) 25
    OPERATOR_LE (269) 54
    OPERATOR_GE (270) 53
    OPERATOR_EQ (271) 52
    OPERATOR_DIF (272) 51
    TK_IDENTIFIER (273) 4 5 6 21 29 30 37 59
    LIT_INT (274) 6 13
    LIT_REAL (275) 14
    LIT_CHAR (276) 15
    LIT_STRING (277) 32
    TOKEN_ERROR (278)


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    program (43)
        on left: 1
        on right: 0
    declarations (44)
        on left: 2 3
        on right: 1 2
    declaration (45)
        on left: 4 5 6
        on right: 2
    type (46)
        on left: 7 8 9 10
        on right: 4 5 6 21 57
    vectorInicialization (47)
        on left: 11 12
        on right: 6 12
    literal (48)
        on left: 13 14 15
        on right: 4 12 58
    block (49)
        on left: 16
        on right: 5 27
    parameters (50)
        on left: 17 18
        on right: 5
    parametersTail (51)
        on left: 19 20
        on right: 18 20
    parameter (52)
        on left: 21
        on right: 18 20
    command (53)
        on left: 22 23 24 25 26 27 28 29 30
        on right: 22 23 24 36
    outputParameters (54)
        on left: 31 32
        on right: 26 34
    outputParametersTail (55)
        on left: 33 34
        on right: 31 32 34
    commandList (56)
        on left: 35 36
        on right: 16 36
    functionCall (57)
        on left: 37
        on right: 56
    expressionList (58)
        on left: 38 39
        on right: 37
    expressionListTail (59)
        on left: 40 41
        on right: 39 41
    expression (60)
        on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
        on right: 22 23 24 25 29 30 31 39 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55


State 0

    0 $accept: . program $end

    KW_INT   shift, and go to state 1
    KW_REAL  shift, and go to state 2
    KW_CHAR  shift, and go to state 3
    KW_BOOL  shift, and go to state 4

    $default  reduce using rule 3 (declarations)

    program       go to state 5
    declarations  go to state 6
    declaration   go to state 7
    type          go to state 8


State 1

    7 type: KW_INT .

    $default  reduce using rule 7 (type)


State 2

    8 type: KW_REAL .

    $default  reduce using rule 8 (type)


State 3

    9 type: KW_CHAR .

    $default  reduce using rule 9 (type)


State 4

   10 type: KW_BOOL .

    $default  reduce using rule 10 (type)


State 5

    0 $accept: program . $end

    $end  shift, and go to state 9


State 6

    1 program: declarations .

    $default  reduce using rule 1 (program)


State 7

    2 declarations: declaration . declarations

    KW_INT   shift, and go to state 1
    KW_REAL  shift, and go to state 2
    KW_CHAR  shift, and go to state 3
    KW_BOOL  shift, and go to state 4

    $default  reduce using rule 3 (declarations)

    declarations  go to state 10
    declaration   go to state 7
    type          go to state 8


State 8

    4 declaration: type . TK_IDENTIFIER '=' literal ';'
    5            | type . TK_IDENTIFIER '(' parameters ')' block
    6            | type . TK_IDENTIFIER '[' LIT_INT ']' vectorInicialization ';'

    TK_IDENTIFIER  shift, and go to state 11


State 9

    0 $accept: program $end .

    $default  accept


State 10

    2 declarations: declaration declarations .

    $default  reduce using rule 2 (declarations)


State 11

    4 declaration: type TK_IDENTIFIER . '=' literal ';'
    5            | type TK_IDENTIFIER . '(' parameters ')' block
    6            | type TK_IDENTIFIER . '[' LIT_INT ']' vectorInicialization ';'

    '='  shift, and go to state 12
    '('  shift, and go to state 13
    '['  shift, and go to state 14


State 12

    4 declaration: type TK_IDENTIFIER '=' . literal ';'

    LIT_INT   shift, and go to state 15
    LIT_REAL  shift, and go to state 16
    LIT_CHAR  shift, and go to state 17

    literal  go to state 18


State 13

    5 declaration: type TK_IDENTIFIER '(' . parameters ')' block

    KW_INT   shift, and go to state 1
    KW_REAL  shift, and go to state 2
    KW_CHAR  shift, and go to state 3
    KW_BOOL  shift, and go to state 4

    $default  reduce using rule 17 (parameters)

    type        go to state 19
    parameters  go to state 20
    parameter   go to state 21


State 14

    6 declaration: type TK_IDENTIFIER '[' . LIT_INT ']' vectorInicialization ';'

    LIT_INT  shift, and go to state 22


State 15

   13 literal: LIT_INT .

    $default  reduce using rule 13 (literal)


State 16

   14 literal: LIT_REAL .

    $default  reduce using rule 14 (literal)


State 17

   15 literal: LIT_CHAR .

    $default  reduce using rule 15 (literal)


State 18

    4 declaration: type TK_IDENTIFIER '=' literal . ';'

    ';'  shift, and go to state 23


State 19

   21 parameter: type . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 24


State 20

    5 declaration: type TK_IDENTIFIER '(' parameters . ')' block

    ')'  shift, and go to state 25


State 21

   18 parameters: parameter . parametersTail

    ','  shift, and go to state 26

    $default  reduce using rule 19 (parametersTail)

    parametersTail  go to state 27


State 22

    6 declaration: type TK_IDENTIFIER '[' LIT_INT . ']' vectorInicialization ';'

    ']'  shift, and go to state 28


State 23

    4 declaration: type TK_IDENTIFIER '=' literal ';' .

    $default  reduce using rule 4 (declaration)


State 24

   21 parameter: type TK_IDENTIFIER .

    $default  reduce using rule 21 (parameter)


State 25

    5 declaration: type TK_IDENTIFIER '(' parameters ')' . block

    '{'  shift, and go to state 29

    block  go to state 30


State 26

   20 parametersTail: ',' . parameter parametersTail

    KW_INT   shift, and go to state 1
    KW_REAL  shift, and go to state 2
    KW_CHAR  shift, and go to state 3
    KW_BOOL  shift, and go to state 4

    type       go to state 19
    parameter  go to state 31


State 27

   18 parameters: parameter parametersTail .

    $default  reduce using rule 18 (parameters)


State 28

    6 declaration: type TK_IDENTIFIER '[' LIT_INT ']' . vectorInicialization ';'

    LIT_INT   shift, and go to state 15
    LIT_REAL  shift, and go to state 16
    LIT_CHAR  shift, and go to state 17

    $default  reduce using rule 11 (vectorInicialization)

    vectorInicialization  go to state 32
    literal               go to state 33


State 29

   16 block: '{' . commandList '}'

    KW_IF          shift, and go to state 34
    KW_OUTPUT      shift, and go to state 35
    KW_RETURN      shift, and go to state 36
    TK_IDENTIFIER  shift, and go to state 37
    ';'            shift, and go to state 38
    '{'            shift, and go to state 29

    $default  reduce using rule 35 (commandList)

    block        go to state 39
    command      go to state 40
    commandList  go to state 41


State 30

    5 declaration: type TK_IDENTIFIER '(' parameters ')' block .

    $default  reduce using rule 5 (declaration)


State 31

   20 parametersTail: ',' parameter . parametersTail

    ','  shift, and go to state 26

    $default  reduce using rule 19 (parametersTail)

    parametersTail  go to state 42


State 32

    6 declaration: type TK_IDENTIFIER '[' LIT_INT ']' vectorInicialization . ';'

    ';'  shift, and go to state 43


State 33

   12 vectorInicialization: literal . vectorInicialization

    LIT_INT   shift, and go to state 15
    LIT_REAL  shift, and go to state 16
    LIT_CHAR  shift, and go to state 17

    $default  reduce using rule 11 (vectorInicialization)

    vectorInicialization  go to state 44
    literal               go to state 33


State 34

   22 command: KW_IF . '(' expression ')' command KW_ELSE command
   23        | KW_IF . '(' expression ')' command
   24        | KW_IF . '(' expression ')' KW_LOOP command

    '('  shift, and go to state 45


State 35

   26 command: KW_OUTPUT . outputParameters ';'

    KW_INPUT       shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INT        shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    LIT_CHAR       shift, and go to state 17
    LIT_STRING     shift, and go to state 48
    '('            shift, and go to state 49

    literal           go to state 50
    outputParameters  go to state 51
    functionCall      go to state 52
    expression        go to state 53


State 36

   25 command: KW_RETURN . expression ';'

    KW_INPUT       shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INT        shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    LIT_CHAR       shift, and go to state 17
    '('            shift, and go to state 49

    literal       go to state 50
    functionCall  go to state 52
    expression    go to state 54


State 37

   29 command: TK_IDENTIFIER . '[' expression ']' '=' expression ';'
   30        | TK_IDENTIFIER . '=' expression ';'

    '='  shift, and go to state 55
    '['  shift, and go to state 56


State 38

   28 command: ';' .

    $default  reduce using rule 28 (command)


State 39

   27 command: block .

    $default  reduce using rule 27 (command)


State 40

   36 commandList: command . commandList

    KW_IF          shift, and go to state 34
    KW_OUTPUT      shift, and go to state 35
    KW_RETURN      shift, and go to state 36
    TK_IDENTIFIER  shift, and go to state 37
    ';'            shift, and go to state 38
    '{'            shift, and go to state 29

    $default  reduce using rule 35 (commandList)

    block        go to state 39
    command      go to state 40
    commandList  go to state 57


State 41

   16 block: '{' commandList . '}'

    '}'  shift, and go to state 58


State 42

   20 parametersTail: ',' parameter parametersTail .

    $default  reduce using rule 20 (parametersTail)


State 43

    6 declaration: type TK_IDENTIFIER '[' LIT_INT ']' vectorInicialization ';' .

    $default  reduce using rule 6 (declaration)


State 44

   12 vectorInicialization: literal vectorInicialization .

    $default  reduce using rule 12 (vectorInicialization)


State 45

   22 command: KW_IF '(' . expression ')' command KW_ELSE command
   23        | KW_IF '(' . expression ')' command
   24        | KW_IF '(' . expression ')' KW_LOOP command

    KW_INPUT       shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INT        shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    LIT_CHAR       shift, and go to state 17
    '('            shift, and go to state 49

    literal       go to state 50
    functionCall  go to state 52
    expression    go to state 59


State 46

   57 expression: KW_INPUT . '(' type ')'

    '('  shift, and go to state 60


State 47

   37 functionCall: TK_IDENTIFIER . '(' expressionList ')'
   59 expression: TK_IDENTIFIER .

    '('  shift, and go to state 61

    $default  reduce using rule 59 (expression)


State 48

   32 outputParameters: LIT_STRING . outputParametersTail

    ','  shift, and go to state 62

    ','       [reduce using rule 33 (outputParametersTail)]
    $default  reduce using rule 33 (outputParametersTail)

    outputParametersTail  go to state 63


State 49

   55 expression: '(' . expression ')'

    KW_INPUT       shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INT        shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    LIT_CHAR       shift, and go to state 17
    '('            shift, and go to state 49

    literal       go to state 50
    functionCall  go to state 52
    expression    go to state 64


State 50

   58 expression: literal .

    $default  reduce using rule 58 (expression)


State 51

   26 command: KW_OUTPUT outputParameters . ';'

    ';'  shift, and go to state 65


State 52

   56 expression: functionCall .

    $default  reduce using rule 56 (expression)


State 53

   31 outputParameters: expression . outputParametersTail
   42 expression: expression . '+' expression
   43           | expression . '-' expression
   44           | expression . '/' expression
   45           | expression . '*' expression
   46           | expression . '>' expression
   47           | expression . '<' expression
   48           | expression . '&' expression
   49           | expression . '|' expression
   50           | expression . '~' expression
   51           | expression . OPERATOR_DIF expression
   52           | expression . OPERATOR_EQ expression
   53           | expression . OPERATOR_GE expression
   54           | expression . OPERATOR_LE expression

    OPERATOR_LE   shift, and go to state 66
    OPERATOR_GE   shift, and go to state 67
    OPERATOR_EQ   shift, and go to state 68
    OPERATOR_DIF  shift, and go to state 69
    '<'           shift, and go to state 70
    '>'           shift, and go to state 71
    '&'           shift, and go to state 72
    '|'           shift, and go to state 73
    '~'           shift, and go to state 74
    '+'           shift, and go to state 75
    '-'           shift, and go to state 76
    '*'           shift, and go to state 77
    '/'           shift, and go to state 78
    ','           shift, and go to state 62

    ','       [reduce using rule 33 (outputParametersTail)]
    $default  reduce using rule 33 (outputParametersTail)

    outputParametersTail  go to state 79


State 54

   25 command: KW_RETURN expression . ';'
   42 expression: expression . '+' expression
   43           | expression . '-' expression
   44           | expression . '/' expression
   45           | expression . '*' expression
   46           | expression . '>' expression
   47           | expression . '<' expression
   48           | expression . '&' expression
   49           | expression . '|' expression
   50           | expression . '~' expression
   51           | expression . OPERATOR_DIF expression
   52           | expression . OPERATOR_EQ expression
   53           | expression . OPERATOR_GE expression
   54           | expression . OPERATOR_LE expression

    OPERATOR_LE   shift, and go to state 66
    OPERATOR_GE   shift, and go to state 67
    OPERATOR_EQ   shift, and go to state 68
    OPERATOR_DIF  shift, and go to state 69
    '<'           shift, and go to state 70
    '>'           shift, and go to state 71
    '&'           shift, and go to state 72
    '|'           shift, and go to state 73
    '~'           shift, and go to state 74
    '+'           shift, and go to state 75
    '-'           shift, and go to state 76
    '*'           shift, and go to state 77
    '/'           shift, and go to state 78
    ';'           shift, and go to state 80


State 55

   30 command: TK_IDENTIFIER '=' . expression ';'

    KW_INPUT       shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INT        shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    LIT_CHAR       shift, and go to state 17
    '('            shift, and go to state 49

    literal       go to state 50
    functionCall  go to state 52
    expression    go to state 81


State 56

   29 command: TK_IDENTIFIER '[' . expression ']' '=' expression ';'

    KW_INPUT       shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INT        shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    LIT_CHAR       shift, and go to state 17
    '('            shift, and go to state 49

    literal       go to state 50
    functionCall  go to state 52
    expression    go to state 82


State 57

   36 commandList: command commandList .

    $default  reduce using rule 36 (commandList)


State 58

   16 block: '{' commandList '}' .

    $default  reduce using rule 16 (block)


State 59

   22 command: KW_IF '(' expression . ')' command KW_ELSE command
   23        | KW_IF '(' expression . ')' command
   24        | KW_IF '(' expression . ')' KW_LOOP command
   42 expression: expression . '+' expression
   43           | expression . '-' expression
   44           | expression . '/' expression
   45           | expression . '*' expression
   46           | expression . '>' expression
   47           | expression . '<' expression
   48           | expression . '&' expression
   49           | expression . '|' expression
   50           | expression . '~' expression
   51           | expression . OPERATOR_DIF expression
   52           | expression . OPERATOR_EQ expression
   53           | expression . OPERATOR_GE expression
   54           | expression . OPERATOR_LE expression

    OPERATOR_LE   shift, and go to state 66
    OPERATOR_GE   shift, and go to state 67
    OPERATOR_EQ   shift, and go to state 68
    OPERATOR_DIF  shift, and go to state 69
    '<'           shift, and go to state 70
    '>'           shift, and go to state 71
    '&'           shift, and go to state 72
    '|'           shift, and go to state 73
    '~'           shift, and go to state 74
    '+'           shift, and go to state 75
    '-'           shift, and go to state 76
    '*'           shift, and go to state 77
    '/'           shift, and go to state 78
    ')'           shift, and go to state 83


State 60

   57 expression: KW_INPUT '(' . type ')'

    KW_INT   shift, and go to state 1
    KW_REAL  shift, and go to state 2
    KW_CHAR  shift, and go to state 3
    KW_BOOL  shift, and go to state 4

    type  go to state 84


State 61

   37 functionCall: TK_IDENTIFIER '(' . expressionList ')'

    KW_INPUT       shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INT        shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    LIT_CHAR       shift, and go to state 17
    '('            shift, and go to state 49

    $default  reduce using rule 38 (expressionList)

    literal         go to state 50
    functionCall    go to state 52
    expressionList  go to state 85
    expression      go to state 86


State 62

   34 outputParametersTail: ',' . outputParameters outputParametersTail

    KW_INPUT       shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INT        shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    LIT_CHAR       shift, and go to state 17
    LIT_STRING     shift, and go to state 48
    '('            shift, and go to state 49

    literal           go to state 50
    outputParameters  go to state 87
    functionCall      go to state 52
    expression        go to state 53


State 63

   32 outputParameters: LIT_STRING outputParametersTail .

    $default  reduce using rule 32 (outputParameters)


State 64

   42 expression: expression . '+' expression
   43           | expression . '-' expression
   44           | expression . '/' expression
   45           | expression . '*' expression
   46           | expression . '>' expression
   47           | expression . '<' expression
   48           | expression . '&' expression
   49           | expression . '|' expression
   50           | expression . '~' expression
   51           | expression . OPERATOR_DIF expression
   52           | expression . OPERATOR_EQ expression
   53           | expression . OPERATOR_GE expression
   54           | expression . OPERATOR_LE expression
   55           | '(' expression . ')'

    OPERATOR_LE   shift, and go to state 66
    OPERATOR_GE   shift, and go to state 67
    OPERATOR_EQ   shift, and go to state 68
    OPERATOR_DIF  shift, and go to state 69
    '<'           shift, and go to state 70
    '>'           shift, and go to state 71
    '&'           shift, and go to state 72
    '|'           shift, and go to state 73
    '~'           shift, and go to state 74
    '+'           shift, and go to state 75
    '-'           shift, and go to state 76
    '*'           shift, and go to state 77
    '/'           shift, and go to state 78
    ')'           shift, and go to state 88


State 65

   26 command: KW_OUTPUT outputParameters ';' .

    $default  reduce using rule 26 (command)


State 66

   54 expression: expression OPERATOR_LE . expression

    KW_INPUT       shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INT        shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    LIT_CHAR       shift, and go to state 17
    '('            shift, and go to state 49

    literal       go to state 50
    functionCall  go to state 52
    expression    go to state 89


State 67

   53 expression: expression OPERATOR_GE . expression

    KW_INPUT       shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INT        shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    LIT_CHAR       shift, and go to state 17
    '('            shift, and go to state 49

    literal       go to state 50
    functionCall  go to state 52
    expression    go to state 90


State 68

   52 expression: expression OPERATOR_EQ . expression

    KW_INPUT       shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INT        shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    LIT_CHAR       shift, and go to state 17
    '('            shift, and go to state 49

    literal       go to state 50
    functionCall  go to state 52
    expression    go to state 91


State 69

   51 expression: expression OPERATOR_DIF . expression

    KW_INPUT       shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INT        shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    LIT_CHAR       shift, and go to state 17
    '('            shift, and go to state 49

    literal       go to state 50
    functionCall  go to state 52
    expression    go to state 92


State 70

   47 expression: expression '<' . expression

    KW_INPUT       shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INT        shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    LIT_CHAR       shift, and go to state 17
    '('            shift, and go to state 49

    literal       go to state 50
    functionCall  go to state 52
    expression    go to state 93


State 71

   46 expression: expression '>' . expression

    KW_INPUT       shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INT        shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    LIT_CHAR       shift, and go to state 17
    '('            shift, and go to state 49

    literal       go to state 50
    functionCall  go to state 52
    expression    go to state 94


State 72

   48 expression: expression '&' . expression

    KW_INPUT       shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INT        shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    LIT_CHAR       shift, and go to state 17
    '('            shift, and go to state 49

    literal       go to state 50
    functionCall  go to state 52
    expression    go to state 95


State 73

   49 expression: expression '|' . expression

    KW_INPUT       shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INT        shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    LIT_CHAR       shift, and go to state 17
    '('            shift, and go to state 49

    literal       go to state 50
    functionCall  go to state 52
    expression    go to state 96


State 74

   50 expression: expression '~' . expression

    KW_INPUT       shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INT        shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    LIT_CHAR       shift, and go to state 17
    '('            shift, and go to state 49

    literal       go to state 50
    functionCall  go to state 52
    expression    go to state 97


State 75

   42 expression: expression '+' . expression

    KW_INPUT       shift, and go to state 46
    TK_IDENTIFIER  shift, and go to state 47
    LIT_INT        shift, and go to state 15
    LIT_REAL       shift, and go to state 16
    LIT_CHAR       shift, and go to state 17
    '('            shift, and go to state 49

    literal       go to state 50
    functionCall  go to state 52
    expression    go to state 98

